[package]
name = "unreal_log_parser"
description = "A simple log parser for Unreal Engine logs, which can be used to extract useful information from logs."
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/KyrylSydorov/UE_LOG_Parser"
keywords = ["unreal-engine", "log-parser", "log", "parser", "ue5"]
categories = ["development-tools"]
authors = ["Kyryl Sydorov"]

[dependencies]
clap = "4.5.21"
anyhow = "1.0.93"
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "1.0.69"
